# small-language-model

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  debug.yaml  small-plwiki.yaml  tiny-sentiment-slang.yaml
experiments/: lab03-sentiment-analysis.ipynb  notebook.ipynb
scripts/: build_custom_tokenizer.py  build_tokenizer.py  calculate_metrics.py  download_data.py  generate.py  train_model.py
scripts/dataset/: download_plslang.py  download_plwiki.py
scripts/generation/: generate.py  train_model.py
src/data/: hf_dataset_processor.py  text_dataset.py
src/data/tokenizer/: bpe_tokenizer_builder.py  tokenizer_builder.py  whitespace_tokenizer_builder.py
src/inference/: generator.py
src/model/: classifier.py  model_config.py  transformer_block.py  transformer_model.py
src/training/: trainer.py
src/utils/: logger.py  metrics.py  model_utils.py  tokenizer_utils.py
