[project]
name = "lab02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
